[package]
name = "cardahoy-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cardahoy-crypto = { path = "../cardahoy-crypto" }
cardahoy-utils = { path = "../cardahoy-utils" }
reqwest = { version = "0.12.3", features = ["json"] }
uuid = { version = "1.8.0", features = ["v4"] }
strum = "0.26.2"
strum_macros = "0.26.2"
anyhow = "1.0.82"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
