[package]
name = "cardahoy-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
xlsxwriter = ["dep:xlsxwriter", "dep:calamine"]

[dependencies]
cardahoy-api = { path = "../cardahoy-api" }
cardahoy-crypto = { path = "../cardahoy-crypto" }
cardahoy-utils = { path = "../cardahoy-utils" }
anyhow = "1.0.82"
comfy-table = "7.1.1"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
csv = "1.3.0"
serde = "1.0.198"
chrono = "0.4.38"
xlsxwriter = { version = "0.6.0", optional = true }
calamine = { version = "0.24.0", optional = true }
